--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class='max-width'>
             <div class='logo'><a href='#'>Portfo<span>lio.</span></a></div>
             <ul class='menu'>
-                <li><a href='#'>Home</li>
+                <li><a href='#'>Home</a></li>
                 <li><a href='#'>About</a></li>
                 <li><a href='#'>Resume</a></li>
                 <li><a href='#'>Skills</a></li>
@@ -30,7 +30,7 @@
             <div class='home-content'>
                 <div class='text-1'>Hello, my name is</div>
                 <div class='text-2'>Jake Flynn</div>
-                <div class='text-3'>And I'm a <span>Software Engineer</span></div>
+                <div class='text-3'>And I'm a <span>Software Engineer.</span></div>
             </div>
         </div>
     </section>
