--- a/index.html
+++ b/index.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio Website</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  </head>
 
-<body>
+  <body>
     <nav class="navbar">
-        <div class='max-width'>
-            <div class='logo'><a href='#'>Portfo<span>lio.</span></a></div>
-            <ul class='menu'>
-                <li><a href='#'>Home</a></li>
-                <li><a href='#'>About</a></li>
-                <li><a href='#'>Resume</a></li>
-                <li><a href='#'>Skills</a></li>
-                <li><a href='#'>Projects</a></li>
-                <li><a href='#'>Contact</a></li>
-            </ul>
+      <div class="max-width">
+        <div class="logo">
+          <a href="#">Portfo<span>lio.</span></a>
         </div>
+        <ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <div class="menu-btn">
+          <i class="fas fa-bars"></i>
+        </div>
+      </div>
     </nav>
 
-    <section class='home' id='home'>
-        <div class='max-width'>
-            <div class='home-content'>
-                <div class='text-1'>Hello, my name is</div>
-                <div class='text-2'>Jake Flynn</div>
-                <div class='text-3'>And I'm a <span>Software Engineer.</span></div>
-            </div>
+    <section class="home" id="home">
+      <div class="max-width">
+        <div class="home-content">
+          <div class="text-1">Hello, my name is</div>
+          <div class="text-2">Jake Flynn</div>
+          <div class="text-3">And I'm a <span>Software Engineer.</span></div>
+          <a href="#">Hire Me</a>
         </div>
+      </div>
     </section>
 
-</body>
-
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium sed
+      nihil quae distinctio dignissimos autem soluta dolores consequatur!
+      Blanditiis, iste assumenda voluptates omnis nobis eum deleniti alias
+      excepturi inventore repellendus?
+    </p>
+    <script src="script.js"></script>
+  </body>
 </html>
