--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       </div>
     </nav>
 
+    <!-- home section -->
+
     <section class="home" id="home">
       <div class="max-width">
         <div class="home-content">
@@ -37,6 +39,18 @@
           <div class="text-2">Jake Flynn</div>
           <div class="text-3">And I'm a <span>Software Engineer.</span></div>
           <a href="#">Hire Me</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- about section -->
+
+    <section class="about" id="about">
+      <div class="max-width">
+        <div class="about-content">
+          <div class="column left">
+            <img src="images/image0.jpeg" alt="" />
+          </div>
         </div>
       </div>
     </section>
