about me section

--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
 
     <section class="about" id="about">
       <div class="max-width">
+          <h2 class="title">About Me</h2>
         <div class="about-content">
           <div class="column left">
             <img src="images/image0.jpeg" alt="" />
+          </div>
+          <div class='column right'>
+              <div class='text'>I'm Jake and I'm a <span>Software Engineer.</span></div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga hic tenetur quia ab delectus fugit eum dolorem dolore culpa? Velit modi iste deserunt consectetur, neque laboriosam aperiam minima excepturi nihil?</p>
+              <a href="#">Download CV</a>
           </div>
         </div>
       </div>
