--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="menu">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Resume</a></li>
+          <!-- <li><a href="#">Resume</a></li> -->
           <li><a href="#">Skills</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#">Contact</a></li>
@@ -47,15 +47,112 @@
 
     <section class="about" id="about">
       <div class="max-width">
-          <h2 class="title">About Me</h2>
+        <h2 class="title">About Me</h2>
         <div class="about-content">
           <div class="column left">
             <img src="images/image0.jpeg" alt="" />
           </div>
-          <div class='column right'>
-              <div class='text'>I'm Jake and I'm a <span>Software Engineer.</span></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga hic tenetur quia ab delectus fugit eum dolorem dolore culpa? Velit modi iste deserunt consectetur, neque laboriosam aperiam minima excepturi nihil?</p>
-              <a href="#">Download CV</a>
+          <div class="column right">
+            <div class="text">
+              I'm Jake and I'm a <span>Software Engineer.</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga hic
+              tenetur quia ab delectus fugit eum dolorem dolore culpa? Velit
+              modi iste deserunt consectetur, neque laboriosam aperiam minima
+              excepturi nihil?
+            </p>
+            <a href="#">Download CV</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- resume section
+
+    <section class="resume" id="resume">
+      <div class="max-width">
+        <h2 class="title">Resume</h2>
+        <div class="resume-content">
+          <div class="card">
+            <div class="box">
+              <div class="text">Experience</div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Pariatur temporibus adipisci rerum cupiditate sequi mollitia.
+                Tempora suscipit quidem recusandae! Eius dolorum voluptatum
+                eveniet, rem corporis soluta modi sunt delectus itaque?
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="box">
+              <div class="text">Education</div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Pariatur temporibus adipisci rerum cupiditate sequi mollitia.
+                Tempora suscipit quidem recusandae! Eius dolorum voluptatum
+                eveniet, rem corporis soluta modi sunt delectus itaque?
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
+
+    <!-- skills section -->
+
+    <section class="skills" id="skills">
+      <div class="max-width">
+        <h2 class="title">My Skills</h2>
+        <div class="skills-content">
+          <div class="column left">
+            <div class="text">Languages & Proficiencies</div>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi
+              amet explicabo quisquam officia harum, doloribus rem beatae
+              temporibus! Voluptatum libero provident atque ratione nam mollitia
+              ex, deleniti ad qui harum.
+            </p>
+            <a href="#">Read More</a>
+          </div>
+          <div class="column right">
+              <div class="bars">
+                  <div class="info">
+                      <span>HTML</span>
+                      <span>95%</span>
+                  </div>
+              </div>
+              <div class="bars">
+                <div class="info">
+                    <span>CSS</span>
+                    <span>80%</span>
+                </div>
+            </div>
+            <div class="bars">
+                <div class="info">
+                    <span>JavaScript</span>
+                    <span>90%</span>
+                </div>
+            </div>
+            <div class="bars">
+                <div class="info">
+                    <span>React</span>
+                    <span>60%</span>
+                </div>
+            </div>
+            <div class="bars">
+                <div class="info">
+                    <span>Ruby</span>
+                    <span>75%</span>
+                </div>
+            </div>
+            <div class="bars">
+                <div class="info">
+                    <span>SQL</span>
+                    <span>85%</span>
+                </div>
+            </div>
           </div>
         </div>
       </div>
