--- a/index.html
+++ b/index.html
@@ -122,36 +122,42 @@
                       <span>HTML</span>
                       <span>95%</span>
                   </div>
+                  <div class="line html"></div>
               </div>
               <div class="bars">
                 <div class="info">
                     <span>CSS</span>
                     <span>80%</span>
                 </div>
+                <div class="line css"></div>
             </div>
             <div class="bars">
                 <div class="info">
                     <span>JavaScript</span>
                     <span>90%</span>
                 </div>
+                <div class="line js"></div>
             </div>
             <div class="bars">
                 <div class="info">
                     <span>React</span>
-                    <span>60%</span>
+                    <span>70%</span>
                 </div>
+                <div class="line react"></div>
             </div>
             <div class="bars">
                 <div class="info">
                     <span>Ruby</span>
                     <span>75%</span>
                 </div>
+                <div class="line ruby"></div>
             </div>
             <div class="bars">
                 <div class="info">
                     <span>SQL</span>
                     <span>85%</span>
                 </div>
+                <div class="line sql"></div>
             </div>
           </div>
         </div>
