--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
   </head>
 
   <body>
@@ -37,7 +38,9 @@
         <div class="home-content">
           <div class="text-1">Hello, my name is</div>
           <div class="text-2">Jake Flynn</div>
-          <div class="text-3">And I'm a <span>Software Engineer.</span></div>
+          <div class="text-3">
+            And I'm a <span class="typing"></span>
+          </div>
           <a href="#">Hire Me</a>
         </div>
       </div>
@@ -57,10 +60,15 @@
               I'm Jake and I'm a <span>Software Engineer.</span>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga hic
-              tenetur quia ab delectus fugit eum dolorem dolore culpa? Velit
-              modi iste deserunt consectetur, neque laboriosam aperiam minima
-              excepturi nihil?
+              My passion for web development began in early 2020 when I was
+              introduced to the creative world of CSS. Quickly, front-end
+              development became a hobby of mine that consumed most of my free
+              time. Fast forward to today, I've had the priviledge of
+              collaborating with like-minded individuals through General
+              Assembly's Software Engineering course, while learning the ins and
+              outs of both front and back end web development. My main focus is
+              crafting clean, elegant and efficient code to supplement the needs
+              of clients/employers.
             </p>
             <a href="#">Download CV</a>
           </div>
@@ -107,62 +115,71 @@
         <h2 class="title">My Skills</h2>
         <div class="skills-content">
           <div class="column left">
-            <div class="text">Languages & Proficiencies</div>
-            <p>
+            <div class="text">Skills & Proficiencies</div>
+            <ul class="skill">
+              <li>Full Stack Web Development</li>
+              <li>Software Best Practices</li>
+              <li>Project Management</li>
+              <li>Communication/Organization Strategy</li>
+              <li>Sales Expertise</li>
+            </ul>
+            <!-- <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi
               amet explicabo quisquam officia harum, doloribus rem beatae
               temporibus! Voluptatum libero provident atque ratione nam mollitia
               ex, deleniti ad qui harum.
-            </p>
+            </p> -->
             <a href="#">Read More</a>
           </div>
           <div class="column right">
-              <div class="bars">
-                  <div class="info">
-                      <span>HTML</span>
-                      <span>95%</span>
-                  </div>
-                  <div class="line html"></div>
+            <div class="bars">
+              <div class="info">
+                <span>HTML</span>
+                <span>95%</span>
               </div>
-              <div class="bars">
-                <div class="info">
-                    <span>CSS</span>
-                    <span>80%</span>
-                </div>
-                <div class="line css"></div>
+              <div class="line html"></div>
             </div>
             <div class="bars">
-                <div class="info">
-                    <span>JavaScript</span>
-                    <span>90%</span>
-                </div>
-                <div class="line js"></div>
+              <div class="info">
+                <span>CSS</span>
+                <span>80%</span>
+              </div>
+              <div class="line css"></div>
             </div>
             <div class="bars">
-                <div class="info">
-                    <span>React</span>
-                    <span>70%</span>
-                </div>
-                <div class="line react"></div>
+              <div class="info">
+                <span>JavaScript</span>
+                <span>90%</span>
+              </div>
+              <div class="line js"></div>
             </div>
             <div class="bars">
-                <div class="info">
-                    <span>Ruby</span>
-                    <span>75%</span>
-                </div>
-                <div class="line ruby"></div>
+              <div class="info">
+                <span>React</span>
+                <span>70%</span>
+              </div>
+              <div class="line react"></div>
             </div>
             <div class="bars">
-                <div class="info">
-                    <span>SQL</span>
-                    <span>85%</span>
-                </div>
-                <div class="line sql"></div>
+              <div class="info">
+                <span>Ruby</span>
+                <span>75%</span>
+              </div>
+              <div class="line ruby"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>SQL</span>
+                <span>85%</span>
+              </div>
+              <div class="line sql"></div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- projects section -->
 
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium sed
