--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
           <div class="column right">
             <div class="text">
-              I'm Jake and I'm a <span>Software Engineer.</span>
+              I'm Jake and I'm a <span class="typing-2"></span>
             </div>
             <p>
               My passion for web development began in early 2020 when I was
@@ -65,7 +65,7 @@
               development became a hobby of mine that consumed most of my free
               time. Fast forward to today, I've had the priviledge of
               collaborating with like-minded individuals through General
-              Assembly's Software Engineering course, while learning the ins and
+              Assembly's Software Engineering course while learning the ins and
               outs of both front and back end web development. My main focus is
               crafting clean, elegant and efficient code to supplement the needs
               of clients/employers.
@@ -181,12 +181,12 @@
 
     <!-- projects section -->
 
-    <p>
+    <!-- <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium sed
       nihil quae distinctio dignissimos autem soluta dolores consequatur!
       Blanditiis, iste assumenda voluptates omnis nobis eum deleniti alias
       excepturi inventore repellendus?
-    </p>
+    </p> -->
     <script src="script.js"></script>
   </body>
 </html>
