--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://kit.fontawesome.com/305afda825.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
   </head>
@@ -187,6 +187,6 @@
       Blanditiis, iste assumenda voluptates omnis nobis eum deleniti alias
       excepturi inventore repellendus?
     </p> -->
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
   </body>
 </html>
