contact section html

--- a/index.html
+++ b/index.html
@@ -227,6 +227,43 @@
         </div>
     </section>
 
+    <!-- contact section -->
+
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact Me</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Get In Touch</div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet qui molestiae eius minus natus ipsam, beatae recusandae iste quaerat totam.</p>
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fas fa-user"></i>
+                            <div class="info">
+                                <div class="head">Name</div>
+                                <div class="sub-title">Jake Flynn</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-marker-alt"></i>
+                            <div class="info">
+                                <div class="head">Location</div>
+                                <div class="sub-title">New Albany, Ohio</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-envelope"></i>
+                            <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">jtflynn11797@yahoo.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium sed
       nihil quae distinctio dignissimos autem soluta dolores consequatur!
