--- a/index.html
+++ b/index.html
@@ -6,12 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/305afda825.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/305afda825.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"
+      integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body>
@@ -41,9 +60,7 @@
         <div class="home-content">
           <div class="text-1">Hello, my name is</div>
           <div class="text-2">Jake Flynn</div>
-          <div class="text-3">
-            And I'm a <span class="typing"></span>
-          </div>
+          <div class="text-3">And I'm a <span class="typing"></span></div>
           <a href="#">Hire Me</a>
         </div>
       </div>
@@ -185,83 +202,128 @@
     <!-- projects section -->
 
     <section class="projects" id="projects">
-        <div class="max-width">
-            <h2 class="title">My Projects</h2>
-            <div class="carousel owl-carousel">
-                <div class="card">
-                    <div class="box">
-                        <img src="images/project1.png" alt="">
-                        <div class="text">Some Project</div>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, perspiciatis.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/project1.png" alt="">
-                        <div class="text">Some Project</div>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, perspiciatis.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/project1.png" alt="">
-                        <div class="text">Some Project</div>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, perspiciatis.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/project1.png" alt="">
-                        <div class="text">Some Project</div>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, perspiciatis.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/project1.png" alt="">
-                        <div class="text">Some Project</div>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, perspiciatis.</p>
-                    </div>
-                </div>
+      <div class="max-width">
+        <h2 class="title">My Projects</h2>
+        <div class="carousel owl-carousel">
+          <div class="card">
+            <div class="box">
+              <img src="images/project1.png" alt="" />
+              <div class="text">Some Project</div>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Voluptatum, perspiciatis.
+              </p>
             </div>
+          </div>
+          <div class="card">
+            <div class="box">
+              <img src="images/project1.png" alt="" />
+              <div class="text">Some Project</div>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Voluptatum, perspiciatis.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="box">
+              <img src="images/project1.png" alt="" />
+              <div class="text">Some Project</div>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Voluptatum, perspiciatis.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="box">
+              <img src="images/project1.png" alt="" />
+              <div class="text">Some Project</div>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Voluptatum, perspiciatis.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="box">
+              <img src="images/project1.png" alt="" />
+              <div class="text">Some Project</div>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Voluptatum, perspiciatis.
+              </p>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
 
     <!-- contact section -->
 
     <section class="contact" id="contact">
-        <div class="max-width">
-            <h2 class="title">Contact Me</h2>
-            <div class="contact-content">
-                <div class="column left">
-                    <div class="text">Get In Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet qui molestiae eius minus natus ipsam, beatae recusandae iste quaerat totam.</p>
-                    <div class="icons">
-                        <div class="row">
-                            <i class="fas fa-user"></i>
-                            <div class="info">
-                                <div class="head">Name</div>
-                                <div class="sub-title">Jake Flynn</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <i class="fas fa-marker-alt"></i>
-                            <div class="info">
-                                <div class="head">Location</div>
-                                <div class="sub-title">New Albany, Ohio</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <i class="fas fa-envelope"></i>
-                            <div class="info">
-                                <div class="head">Email</div>
-                                <div class="sub-title">jtflynn11797@yahoo.com</div>
-                            </div>
-                        </div>
-                    </div>
+      <div class="max-width">
+        <h2 class="title">Contact Me</h2>
+        <div class="contact-content">
+          <div class="column left">
+            <div class="text">Get In Touch</div>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+              qui molestiae eius minus natus ipsam, beatae recusandae iste
+              quaerat totam.
+            </p>
+            <div class="icons">
+              <div class="row">
+                <i class="fas fa-user"></i>
+                <div class="info">
+                  <!-- <div class="head">Name</div> -->
+                  <div class="sub-title">Jake Flynn</div>
                 </div>
+              </div>
+              <div class="row">
+                <i class="fas fa-map-marker-alt"></i>
+                <div class="info">
+                  <!-- <div class="head">Location</div> -->
+                  <div class="sub-title">New Albany, Ohio</div>
+                </div>
+              </div>
+              <div class="row">
+                <i class="fas fa-envelope"></i>
+                <div class="info">
+                  <!-- <div class="head">Email</div> -->
+                  <div class="sub-title">jtflynn11797@yahoo.com</div>
+                </div>
+              </div>
             </div>
+          </div>
+          <div class="column right">
+            <div class="text">Message Me</div>
+            <form action="#">
+              <div class="fields">
+                <div class="field name">
+                  <input type="text" placeholder="Name" required />
+                </div>
+                <div class="field email">
+                  <input type="email" placeholder="Email" required />
+                </div>
+              </div>
+              <div class="field">
+                <input type="text" placeholder="Subject" required />
+              </div>
+              <div class="field textarea">
+                <textarea
+                  cols="30"
+                  rows="10"
+                  placeholder="Description"
+                ></textarea>
+              </div>
+              <div class="button">
+                <button type="submit">Send Message</button>
+              </div>
+            </form>
+          </div>
         </div>
+      </div>
     </section>
 
     <!-- <p>
