--- a/index.html
+++ b/index.html
@@ -34,18 +34,21 @@
   </head>
 
   <body>
+      <div class="scroll-up-btn">
+          <i class="fas fa-angle-up"></i>
+      </div>
     <nav class="navbar">
       <div class="max-width">
         <div class="logo">
           <a href="#">Portfo<span>lio.</span></a>
         </div>
         <ul class="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
           <!-- <li><a href="#">Resume</a></li> -->
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="menu-btn">
           <i class="fas fa-bars"></i>
@@ -266,12 +269,12 @@
         <h2 class="title">Contact Me</h2>
         <div class="contact-content">
           <div class="column left">
-            <div class="text">Get In Touch</div>
+            <!-- <div class="text">Get In Touch</div>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet
               qui molestiae eius minus natus ipsam, beatae recusandae iste
               quaerat totam.
-            </p>
+            </p> -->
             <div class="icons">
               <div class="row">
                 <i class="fas fa-user"></i>
@@ -325,6 +328,12 @@
         </div>
       </div>
     </section>
+
+    <!-- footer section -->
+
+    <footer>
+        <span>Created By <a href="#">Jake Flynn</a>  <span class="far fa-copyright"></span> 2021 All Rights Reserved.</span>
+    </footer>
 
     <!-- <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium sed
