--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
   </head>
 
   <body>
-      <div class="scroll-up-btn">
-          <i class="fas fa-angle-up"></i>
-      </div>
+    <div class="scroll-up-btn">
+      <i class="fas fa-angle-up"></i>
+    </div>
     <nav class="navbar">
       <div class="max-width">
         <div class="logo">
           <a href="#">Portfo<span>lio.</span></a>
         </div>
         <ul class="menu">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#home" class="menu-btn">Home</a></li>
+          <li><a href="#about" class="menu-btn">About</a></li>
           <!-- <li><a href="#">Resume</a></li> -->
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#skills" class="menu-btn">Skills</a></li>
+          <li><a href="#projects" class="menu-btn">Projects</a></li>
+          <li><a href="#contact" class="menu-btn">Contact</a></li>
         </ul>
         <div class="menu-btn">
           <i class="fas fa-bars"></i>
@@ -64,13 +64,12 @@
           <div class="text-1">Hello, my name is</div>
           <div class="text-2">Jake Flynn</div>
           <div class="text-3">And I'm a <span class="typing"></span></div>
-          <a href="#">Hire Me</a>
+          <a href="mailto: jtflynn11797@yahoo.com">Hire Me</a>
         </div>
       </div>
     </section>
 
     <!-- about section -->
-
     <section class="about" id="about">
       <div class="max-width">
         <h2 class="title">About Me</h2>
@@ -93,8 +92,18 @@
               crafting clean, elegant and efficient code to supplement the needs
               of clients/employers.
             </p>
-            <a href="#">Download CV</a>
+            <a
+              href="https://docs.google.com/document/d/1IzCoOulRlWAxds7t2IIPUeDZGAiDvMCSONaOXwZ7CaQ/edit?usp=sharing"
+              target="blank"
+              >Download CV</a
+            >
           </div>
+          <!-- <div class="social">
+            <i class="fab fa-github"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-facebook"></i>
+          </div> -->
         </div>
       </div>
     </section>
@@ -314,11 +323,7 @@
                 <input type="text" placeholder="Subject" required />
               </div>
               <div class="field textarea">
-                <textarea
-                  cols="30"
-                  rows="10"
-                  placeholder="Description"
-                ></textarea>
+                <textarea cols="30" rows="10" placeholder="Message"></textarea>
               </div>
               <div class="button">
                 <button type="submit">Send Message</button>
@@ -332,7 +337,10 @@
     <!-- footer section -->
 
     <footer>
-        <span>Created By <a href="#">Jake Flynn</a>  <span class="far fa-copyright"></span> 2021 All Rights Reserved.</span>
+      <span
+        >Created By <a href="#">Jake Flynn</a>
+        <span class="far fa-copyright"></span> 2021 All Rights Reserved.</span
+      >
     </footer>
 
     <!-- <p>
