--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <div class="card">
             <div class="box">
               <img src="images/project1.png" alt="" />
-              <div class="text">Some Project</div>
+              <div class="text"><a href="https://vuelendar.vercel.app/">Vuelendar</a></div>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Voluptatum, perspiciatis.
