--- a/index.html
+++ b/index.html
@@ -222,28 +222,16 @@
               <img src="images/project1.png" alt="" />
               <div class="text"><a href="https://vuelendar.vercel.app/">Vuelendar</a></div>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Voluptatum, perspiciatis.
+                A simple calendar application that allows users to keep track of planned events. Vuelendar was created using Vue.js, Vuetify, and Firestore.
               </p>
             </div>
           </div>
           <div class="card">
             <div class="box">
-              <img src="images/project1.png" alt="" />
-              <div class="text">Some Project</div>
+              <img src="images/project2.png" alt="" />
+              <div class="text"><a href="https://what2watch.vercel.app/">What To Watch</a></div>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Voluptatum, perspiciatis.
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="box">
-              <img src="images/project1.png" alt="" />
-              <div class="text">Some Project</div>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Voluptatum, perspiciatis.
+                What To Watch is an application designed to allow users to browse movies and tv shows. It was created using React, Material UI, and the OMDB api.
               </p>
             </div>
           </div>
