--- a/index.html
+++ b/index.html
@@ -219,39 +219,40 @@
         <div class="carousel owl-carousel">
           <div class="card">
             <div class="box">
-              <img src="images/project1.png" alt="" />
-              <div class="text"><a href="https://vuelendar.vercel.app/">Vuelendar</a></div>
+              <img src="images/project3.png" alt="" />
+              <div class="text">
+                <a href="https://quizme-beige.vercel.app/">QuizMe</a>
+              </div>
               <p>
-                A simple calendar application that allows users to keep track of planned events. Vuelendar was created using Vue.js, Vuetify, and Firestore.
+                Created with React, Materialize UI, and OTDB api, QuizMe is a
+                trivia app that allows users to test their knowledge on a wide
+                variety of topics.
               </p>
             </div>
           </div>
           <div class="card">
             <div class="box">
               <img src="images/project2.png" alt="" />
-              <div class="text"><a href="https://what2watch.vercel.app/">What To Watch</a></div>
+              <div class="text">
+                <a href="https://what2watch.vercel.app/">What To Watch</a>
+              </div>
               <p>
-                What To Watch is an application designed to allow users to browse movies and tv shows. It was created using React, Material UI, and the OMDB api.
+                What To Watch is an application designed to allow users to
+                browse movies and tv shows. It was created using React, Materialize
+                UI, and the OMDB api.
               </p>
             </div>
           </div>
           <div class="card">
             <div class="box">
               <img src="images/project1.png" alt="" />
-              <div class="text">Some Project</div>
+              <div class="text">
+                <a href="https://vuelendar.vercel.app/">Vuelendar</a>
+              </div>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Voluptatum, perspiciatis.
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="box">
-              <img src="images/project1.png" alt="" />
-              <div class="text">Some Project</div>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Voluptatum, perspiciatis.
+                A simple calendar application that allows users to keep track of
+                planned events. Vuelendar was created using Vue.js, Vuetify, and
+                and Google Firebase.
               </p>
             </div>
           </div>
