--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               temporibus! Voluptatum libero provident atque ratione nam mollitia
               ex, deleniti ad qui harum.
             </p> -->
-            <a href="#">Read More</a>
+            <a href="https://github.com/JakeFlynn19">GitHub</a>
           </div>
           <div class="column right">
             <div class="bars">
