--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
                 <a href="https://quizme-beige.vercel.app/">QuizMe</a>
               </div>
               <p>
-                Created with React, Materialize UI, and OTDB api, QuizMe is a
+                Created with React, Material UI, and OTDB api, QuizMe is a
                 trivia app that allows users to test their knowledge on a wide
-                variety of topics.
+                variety of topics and difficulties.
               </p>
             </div>
           </div>
@@ -238,7 +238,7 @@
               </div>
               <p>
                 What To Watch is an application designed to allow users to
-                browse movies and tv shows. It was created using React, Materialize
+                browse movies and tv shows. It was created using React, Material
                 UI, and the OMDB api.
               </p>
             </div>
